Make Legacy::Runnable abstract valuetype

--- a/Console/Console.vcxproj
+++ b/Console/Console.vcxproj
@@ -185,7 +185,7 @@
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug LLVM|Win32'">
-    <OutDir>$(SolutionDir)x64\$(Configuration)\x86\</OutDir>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(Platform)\$(Configuration)\</IntDir>
     <TargetExt>.nex</TargetExt>
     <LinkIncremental>false</LinkIncremental>
@@ -203,7 +203,7 @@
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release LLVM|Win32'">
-    <OutDir>$(SolutionDir)x64\$(Configuration)\x86\</OutDir>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(Platform)\$(Configuration)\</IntDir>
     <TargetExt>.nex</TargetExt>
     <LinkIncremental>false</LinkIncremental>
